gcc/testsuite/rust/rustc/ui/macros/macro-match-nonterminal_dg.rs
macro_rules! test {
    ($a, $b) => {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
// { dg-error "" "" { target *-*-* } .-3 }
// { dg-warning "" "" { target *-*-* } .-4 }
// { dg-warning "" "" { target *-*-* } .-5 }
        ()
    };
}

fn main() {
    test!()
}

